[package]
name = "cime-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
webbrowser = "1"
url = "2"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
regex-lite = "0.1"
http = "1"
